--- a/prometheus-exporter/prometheus-exporter.html
+++ b/prometheus-exporter/prometheus-exporter.html
@@ -37,6 +37,7 @@
         <ul>
           <li><code>inc</code> - Increases the counter by <code>val</code> (without specifying <code>val</code>,
             defaults to <code>1</code>)</li>
+          <li><code>remove</code> - Remove the stored value</li>
         </ul>
       </li>
       <li>For metrics of type <strong>Gauge</strong>:
@@ -46,6 +47,7 @@
             to <code>1</code>)</li>
           <li><code>dec</code> - Decreases the gauge by <code>val</code> (without specifying <code>val</code>, defaults
             to <code>1</code>)</li>
+          <li><code>remove</code> - Remove the stored value</li>
         </ul>
       </li>
     </ul>
